--- a/index.html
+++ b/index.html
@@ -224,6 +224,14 @@
             <p class="mb-4"><a href="http://mando1621998.github.io/trainingStudio/" class="text-danger text-decoration-none">Live Demo</a></p>
           </div>
         </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item">
+            <img src="img/portfolio/Travel.png" class="w-100 img-thumbnail" alt="portfolio item">
+            <h3 class="text-capitalize fs-5 my-2">Travel-Website</h3>
+            <p class="mb-4"><a href="https://mando1621998.github.io/Travel-Website/" class="text-danger text-decoration-none">Live Demo</a></p>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
